# 2023_1_StreamTeam

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt
client/lib/: CMakeLists.txt
client/lib/include/: message.hpp  player.hpp  room.hpp  serializer.hpp  user.hpp
client/lib/src/: message.cpp  player.cpp  room.cpp  user.cpp
client/lib/tests/: CMakeLists.txt
client/lib/tests/Message/: message_test.cpp
client/lib/tests/Room/: room_test.cpp
client/src/: main.cpp
client/src/app/: CMakeLists.txt  authwindow.cpp  authwindow.h  authwindow.ui  createroomform.cpp  createroomform.h  createroomform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowdata.cpp  mainwindowslots.cpp  playerwindow.cpp  playerwindow.h  playerwindow.ui  qdynamicbutton.cpp  qdynamicbutton.h  settingswindow.ui  signinwindow.cpp  signinwindow.h  signinwindow.ui
client/src/lib/: CMakeLists.txt
client/src/lib/include/: message.hpp  player.hpp  request.hpp  requestformer.hpp  room.hpp  serializer.hpp  session.hpp  user.hpp
client/src/lib/src/: message.cpp  player.cpp  request.cpp  requestformer.cpp  room.cpp  serializer.cpp  session.cpp  user.cpp
client/src/lib/tests/: CMakeLists.txt
database/: CMakeLists.txt  UsersTable.cpp  UsersTable.hpp  ViewersTable.hpp
database/include/: BidsTable.hpp  FilmsTable.hpp  IDatabase.hpp  MessagesTable.hpp  PostgreSQL.hpp  RoomsTable.hpp  UsersTable.hpp  ViewersTable.hpp  VotesTable.hpp  constants.hpp
database/src/: BidsTable.cpp  FilmsTable.cpp  MessagesTable.cpp  PostgreConnection.cpp  PostgreSQL.cpp  RoomsTable.cpp  UsersTable.cpp  ViewersTable.cpp  VotesTable.cpp
main_server/: CMakeLists.txt  test_data.txt
main_server/database/: CMakeLists.txt
main_server/database/include/: FilmsTable.hpp  IDatabase.hpp  PostgreConnection.hpp  ViewersTable.hpp  constants.hpp
main_server/database/src/: FilmsTable.cpp  MessagesTable.cpp  PostgreConnection.cpp  PostgreSQL.cpp  UsersTable.cpp
main_server/lib/room/: CMakeLists.txt
main_server/lib/room/include/: iroom.hpp  room.hpp
main_server/lib/room/src/: room.cpp
main_server/lib/router/: CMakeLists.txt
main_server/lib/router/include/: router.hpp
main_server/lib/router/src/: router.cpp
main_server/lib/router/tests/: CMakeLists.txt
main_server/lib/server/: CMakeLists.txt
main_server/lib/server/include/: server.hpp
main_server/lib/server/src/: server.cpp
main_server/lib/session/: CMakeLists.txt
main_server/lib/session/include/: isession.hpp  session.hpp
main_server/lib/session/src/: session.cpp
main_server/server/auth/: CMakeLists.txt
main_server/server/auth/include/: auth.hpp
main_server/server/auth/src/: auth.cpp
main_server/server/film_controller/include/: film_controller.hpp
main_server/server/film_controller/src/: film_controller.cpp
main_server/server/message/include/: message.hpp
main_server/server/message/src/: message.cpp
main_server/server/message_controller/include/: message_controller.hpp
main_server/server/message_controller/src/: message_controller.cpp
main_server/server/response/: CMakeLists.txt
main_server/server/response/src/: response.cpp
main_server/server/room/: CMakeLists.txt
main_server/server/room/include/: iroom.hpp  room.hpp
main_server/server/room/src/: room.cpp
main_server/server/room_controller/: CMakeLists.txt
main_server/server/room_controller/include/: room_controller.hpp
main_server/server/room_controller/src/: room_controller.cpp
main_server/server/server/: CMakeLists.txt
main_server/server/server/include/: errors.hpp  server.hpp
main_server/server/server/src/: server.cpp
main_server/server/server/tests/: CMakeLists.txt
main_server/server/session/: CMakeLists.txt
main_server/server/session/include/: session.hpp
main_server/server/session/src/: session.cpp
main_server/server/session/tests/: CMakeLists.txt
main_server/server/user_controller/: CMakeLists.txt
main_server/server/user_controller/include/: user_controller.hpp
main_server/server/user_controller/src/: user_controller.cpp
main_server/server/video_controller/: CMakeLists.txt
main_server/server/video_controller/include/: video_controller.hpp
main_server/server/video_controller/src/: video_controller.cpp
main_server/server/viewer_controller/include/: viewer_controller.hpp
main_server/server/viewer_controller/src/: viewer_controller.cpp
main_server/src/: main.cpp
main_server/tests/: CMakeLists.txt  create_db.sql  script_db.sh
main_server/tests/data/: films_data.json  users_data.json
server/: CMakeLists.txt  Dockerfile
server/auth/include/: auth.hpp
server/film_controller/: CMakeLists.txt
server/film_controller/include/: film_controller.hpp
server/include/: streaming_server.hpp
server/lib/: CMakeLists.txt
server/lib/VideoInfo/: CMakeLists.txt
server/lib/VideoStream/: CMakeLists.txt
server/message/: CMakeLists.txt
server/message/include/: message.hpp
server/message_controller/: CMakeLists.txt
server/response/include/: response.hpp
server/response/src/: response.cpp
server/room/src/: room.cpp
server/room/tests/: CMakeLists.txt
server/room_controller/src/: room_controller.cpp
server/server/include/: server.hpp
server/server/src/: server.cpp
server/session/include/: session.hpp
server/session/src/: session.cpp
server/src/: main.cpp
server/video_controller/include/: video_controller.hpp
server/video_controller/src/: video_controller.cpp
server/viewer_controller/: CMakeLists.txt
server/viewer_controller/include/: viewer_controller.hpp
server/viewer_controller/src/: viewer_controller.cpp
src/app/: CMakeLists.txt  authwindow.cpp  authwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwindow.cpp  playerwindow.ui
src/include/: CMakeLists.txt
src/lib/tests/: CMakeLists.txt
streaming_server/lib/StreamingServer/: CMakeLists.txt
tests/: CMakeLists.txt  create_db.sql  fill_db.sql  test_config.cfg  test_database.cpp
tests/data/: bids_data.json  films_data.json  messages_data.json  rooms_data.json  viewers_data.json  votes_data.json
(+40 files in other folders)
